Fix some tree gen issues